<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_no_ad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/piggy"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:text="@string/pig"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textAlignment="center"
        android:textSize="70sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_later"
        android:id="@+id/info_text"
        android:layout_below="@+id/piggy"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:textColor="#ff000000"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/info_ok_btn"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/info_text"
        android:layout_centerHorizontal="true"
        style="@style/startCustomBtn"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_coins"
        android:id="@+id/info_shop_btn"
        android:visibility="invisible"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/info_ok_btn"
        android:layout_centerHorizontal="true"
        style="@style/startCustomBtn"
        />




</RelativeLayout>
