<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.batmad.quizsmile.GenreActivity">

    <Button
        android:id="@+id/play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_game_btn"
        android:onClick="PlayCommon"
        style="@style/startCustomBtn"
        android:textAppearance="@style/ShadowText"
        android:layout_marginTop="24dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/play_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movies_btn"
        android:textAppearance="@style/ShadowText"
        android:layout_marginTop="8dp"
        android:onClick="PlayMovies"
        style="@style/startCustomBtn"
        app:layout_constraintTop_toBottomOf="@+id/play_btn"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/play_melody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/melody_btn"
        android:textAppearance="@style/ShadowText"
        android:layout_marginTop="8dp"
        android:onClick="PlayMelody"
        style="@style/startCustomBtn"
        app:layout_constraintTop_toBottomOf="@+id/play_movies"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/play_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countries_btn"
        android:textAppearance="@style/ShadowText"
        android:layout_marginTop="8dp"
        android:onClick="PlayCountry"
        style="@style/startCustomBtn"
        app:layout_constraintTop_toBottomOf="@+id/play_melody"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>
