<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.batmad.quizsmile.MainActivity"
    android:id="@+id/main_layout">

    <TextView
        android:id="@+id/emoji"
        android:layout_width="0dp"
        android:layout_height="184dp"
        android:text="None"
        android:textAlignment="center"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="70sp"
        android:visibility="visible"
        android:background="@drawable/grey_panel"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/emoji_title"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <LinearLayout
        android:id="@+id/layout_guess_buttons_upper"
        android:layout_width="364dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_answer_buttons"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_guess_buttons_lower"
        android:layout_width="365dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_guess_buttons_upper"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">
    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_guess_buttons_lower">

        <Button
            android:id="@+id/button_open_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/button3"
            android:onClick="ShowAdForWord"
            android:text="@string/open_word"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center" />


        <Button
            android:id="@+id/button_get_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/button3"
            android:onClick="ShowAdForTip"
            android:text="@string/tips"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center" />


    </LinearLayout>

    <TextView
        android:id="@+id/emoji_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintTop_toBottomOf="@+id/money_btn" />

    <LinearLayout
        android:id="@+id/layout_answer_buttons"
        android:layout_width="335dp"
        android:layout_height="57dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emoji">

    </LinearLayout>

    <Button
        android:id="@+id/money_btn"
        android:layout_width="102dp"
        android:layout_height="40dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/transparent"
        android:text="@string/money_bag"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="1dp" />


</android.support.constraint.ConstraintLayout>
